# xiaomaipro

./: .dockerignore  .gitignore
.github/workflows/: ci.yaml
agent/: .gitignore  README.md  __init__.py  config.py  main.py  memory.py  prompts.py  pyproject.toml  rag.py  safety.py  schemas.py  service.py  tools.py  utils.py
agent/knowledge/: sales_and_purchase.md  ticketing_rules.md
agent/tests/: test_api.py  test_utils.py
deploy/: .env.example  README.md  docker-compose.1g.yml  docker-compose.prod.yml  public.sql
deploy/docker/: backend-entrypoint.sh  backend.Dockerfile  proxy.Dockerfile
deploy/nginx/: default.conf
deploy/scripts/: bootstrap-postgres.sh  deploy-1g.sh  deploy.sh
docs/: implementation_plan.md  ticket_system_design.md  ticket_system_design.md.resolved
front/: README.md  package.json  pnpm-lock.yaml  vite.config.ts
front/src/: App.vue  main.ts  permission.ts
front/src/api/: auth.ts  order.ts  payment.ts  program.ts  user.ts
front/src/router/: index.ts
front/src/store/: user.ts
front/src/utils/: program.ts  request.ts
server/: go.mod  go.sum
server/app/api/: gateway.api  gateway.go
server/app/cmd/: main.go
server/common/: uid.go
server/common/auth/: token.go
server/deploy/: docker-compose-etcd.yml  e3w.ini
server/deploy/config/: gateway-api.yaml  order.yaml  payment.yaml  program.yaml  user.yaml
server/deploy/elk/: docker-compose-elk.yaml
server/test/: pay_test.go  websocket_test.go
test/: order.http  program.http
web/: Des.md  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.vue  main.ts
(+232 files in other folders)
