[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.2.22",
    "langchain-openai>=1.1.12",
    "langchain-text-splitters>=1.1.1",
    "mcp>=1.26.0",
    "openai>=2.30.0",
    "psutil>=7.2.2",
    "pydantic-settings>=2.13.1",
    "redis>=7.4.0",
    "uvicorn>=0.42.0",
]
